# cornice.ext.apispec

./: .gitignore  CONTRIBUTORS.rst  MANIFEST.in  Makefile  README.md  README.rst  api.html  changelog.html  contributors.html  create_setup.py  dev-requirements.txt  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorial.html
.circleci/: config.yaml  config.yml
_sources/: api.rst.txt  index.rst.txt  quickstart.rst.txt  tutorial.rst.txt
cornice_apispec/: __init__.py  autodoc.py  exceptions.py  helpers.py  operations.py  paths.py  predicates.py  swagger.py  util.py  utils.py  validators.py  views.py
cornice_apispec/converters/: __init__.py  parameters.py  schema.py
cornice_apispec/plugins/: cornice.py
docs/: requirements.txt
docs/source/: conf.py  quickstart.rst
examples/: minimalist.py  minimalist_with_response.py  multiplus_request_attributes.py  not_so_minimalist.py  not_so_minimalist_with_cornice_resource.py  not_so_minimalist_with_cornice_service.py  run.py
examples/jsonapi/: README.rst  minimalist.py  requirements.txt  schema.py
tests/: support.py  test_app.py  test_definition_handler.py  test_parameter_handler.py  test_response_handler.py  test_swagger.py
tests/converters/: test_parameters.py  test_schema.py
tests/get_instance_response_schema_with_exclude/: conftest.py  test_swagger.py
tests/get_with_a_instance_and_class_in_two_services/: conftest.py  test_swagger.py
tests/simple_get_class_response_schema/: conftest.py
tests/simple_get_instance_response_schema/: conftest.py  test_swagger.py
tests/support/: _marshmallow.py  colander.py
